// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformProduct original transform tests should default PIM_CLASSIFICATION_CATALOGUE_NAMESPACE if not provided 1`] = `
Array [
  Object {
    "APPEARANCEATTRIBUTES.COLOURFAMILY": Array [
      Object {
        "code": "codesymbol",
        "name": "red symbol",
        "value": "red",
      },
    ],
    "APPEARANCEATTRIBUTES.TEXTUREFAMILY": Array [
      Object {
        "code": "codesymbol",
        "name": "glossy symbol",
        "value": "glossy",
      },
    ],
    "BMI_BRANDS": Array [
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "BRAND": Array [
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CATEGORY": Array [
      Object {
        "code": "parent-category-code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CLASSIFICATION-FEATURE-CODE": Array [
      Object {
        "code": "codesymbol",
        "name": "value symbol",
        "value": "value",
      },
    ],
    "GENERALINFORMATION.MATERIALS": Array [
      Object {
        "code": "codesymbol",
        "name": "concrete symbol",
        "value": "concrete",
      },
    ],
    "MEASUREMENTS.HEIGHT": Array [
      Object {
        "code": "codemm",
        "name": "30 mm",
        "value": "30",
      },
    ],
    "MEASUREMENTS.LENGTH": Array [
      Object {
        "code": "codemm",
        "name": "10 mm",
        "value": "10",
      },
    ],
    "MEASUREMENTS.THICKNESS": Array [
      Object {
        "code": "codemm",
        "name": "40 mm",
        "value": "40",
      },
    ],
    "MEASUREMENTS.WIDTH": Array [
      Object {
        "code": "codemm",
        "name": "20 mm",
        "value": "20",
      },
    ],
    "PARENT-CATEGORY-CODE": Array [
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "PRODUCTFAMILY": Array [
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTLINE": Array [
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "SCORINGWEIGHTATTRIBUTES.SCORINGWEIGHT": Array [
      Object {
        "code": "codesymbol",
        "name": "1.0 symbol",
        "value": "1.0",
      },
    ],
    "allCategories": Array [
      Object {
        "code": "parent-category-code",
        "parentCategoryCode": "",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "BMI-brand-code",
        "parentCategoryCode": "BMI_Brands",
      },
      Object {
        "code": "BMI-brand-code",
        "parentCategoryCode": "parent-category-code",
      },
    ],
    "approvalStatus": "approved",
    "baseProduct": Object {
      "code": "base-code",
      "name": "name",
    },
    "brandCode": "BMI-brand-code",
    "classifications": Array [
      Object {
        "code": "variant-code",
        "features": Array [
          Object {
            "code": "classification-feature-code",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "value",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "scoringWeightAttributes",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/scoringWeightAttributes.scoringweight",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "1.0",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "appearanceAttributes",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.colourfamily",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "red",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.texturefamily",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "glossy",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "generalInformation",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/generalInformation.materials",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "concrete",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "measurements",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.length",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "10",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.width",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "20",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.height",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "30",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.thickness",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "40",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
    ],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "images": Array [
      Object {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
      Object {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
    ],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "http://localhost:8000",
    "measurementValue": "",
    "name": "variant-name",
    "path": "/p/variant-name-glossy-concrete-3464354221",
    "productBenefits": Array [
      "product-benefits",
    ],
    "productReferences": Array [],
    "productScoringWeightInt": 1,
    "shortDescription": "Short description",
    "subTitle": "glossy",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
  },
]
`;

exports[`transformProduct original transform tests should handle appearanceAttributes classifications with no features 1`] = `
Array [
  Object {
    "BMI_BRANDS": Array [
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CATEGORY": Array [
      Object {
        "code": "parent-category-code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "PARENT-CATEGORY-CODE": Array [
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTFAMILY": Array [
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTLINE": Array [
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "allCategories": Array [
      Object {
        "code": "parent-category-code",
        "parentCategoryCode": "",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "BMI-brand-code",
        "parentCategoryCode": "BMI_Brands",
      },
    ],
    "approvalStatus": "approved",
    "baseProduct": Object {
      "code": "base-code",
      "name": "name",
    },
    "brandCode": undefined,
    "classifications": Array [
      Object {
        "code": "appearanceAttributes",
        "features": Array [],
        "name": "name",
      },
    ],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "images": Array [
      Object {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
      Object {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
    ],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "http://localhost:8000",
    "measurementValue": "",
    "name": "variant-name",
    "path": "/p/variant-name-3464354221",
    "productBenefits": Array [
      "product-benefits",
    ],
    "productReferences": Array [],
    "productScoringWeightInt": 0,
    "shortDescription": "Short description",
    "subTitle": "",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
  },
]
`;

exports[`transformProduct original transform tests should handle generalInformation classifications with no features 1`] = `
Array [
  Object {
    "BMI_BRANDS": Array [
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CATEGORY": Array [
      Object {
        "code": "parent-category-code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "PARENT-CATEGORY-CODE": Array [
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTFAMILY": Array [
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTLINE": Array [
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "allCategories": Array [
      Object {
        "code": "parent-category-code",
        "parentCategoryCode": "",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "BMI-brand-code",
        "parentCategoryCode": "BMI_Brands",
      },
    ],
    "approvalStatus": "approved",
    "baseProduct": Object {
      "code": "base-code",
      "name": "name",
    },
    "brandCode": undefined,
    "classifications": Array [
      Object {
        "code": "generalInformation",
        "features": Array [],
        "name": "name",
      },
    ],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "images": Array [
      Object {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
      Object {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
    ],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "http://localhost:8000",
    "measurementValue": "",
    "name": "variant-name",
    "path": "/p/variant-name-3464354221",
    "productBenefits": Array [
      "product-benefits",
    ],
    "productReferences": Array [],
    "productScoringWeightInt": 0,
    "shortDescription": "Short description",
    "subTitle": "",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
  },
]
`;

exports[`transformProduct original transform tests should handle no categories 1`] = `
Array [
  Object {
    "APPEARANCEATTRIBUTES.COLOURFAMILY": Array [
      Object {
        "code": "codesymbol",
        "name": "red symbol",
        "value": "red",
      },
    ],
    "APPEARANCEATTRIBUTES.TEXTUREFAMILY": Array [
      Object {
        "code": "codesymbol",
        "name": "glossy symbol",
        "value": "glossy",
      },
    ],
    "CLASSIFICATION-FEATURE-CODE": Array [
      Object {
        "code": "codesymbol",
        "name": "value symbol",
        "value": "value",
      },
    ],
    "GENERALINFORMATION.MATERIALS": Array [
      Object {
        "code": "codesymbol",
        "name": "concrete symbol",
        "value": "concrete",
      },
    ],
    "MEASUREMENTS.HEIGHT": Array [
      Object {
        "code": "codemm",
        "name": "30 mm",
        "value": "30",
      },
    ],
    "MEASUREMENTS.LENGTH": Array [
      Object {
        "code": "codemm",
        "name": "10 mm",
        "value": "10",
      },
    ],
    "MEASUREMENTS.THICKNESS": Array [
      Object {
        "code": "codemm",
        "name": "40 mm",
        "value": "40",
      },
    ],
    "MEASUREMENTS.WIDTH": Array [
      Object {
        "code": "codemm",
        "name": "20 mm",
        "value": "20",
      },
    ],
    "SCORINGWEIGHTATTRIBUTES.SCORINGWEIGHT": Array [
      Object {
        "code": "codesymbol",
        "name": "1.0 symbol",
        "value": "1.0",
      },
    ],
    "allCategories": Array [],
    "approvalStatus": "approved",
    "baseProduct": Object {
      "code": "base-code",
      "name": "name",
    },
    "brandCode": undefined,
    "classifications": Array [
      Object {
        "code": "variant-code",
        "features": Array [
          Object {
            "code": "classification-feature-code",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "value",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "scoringWeightAttributes",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/scoringWeightAttributes.scoringweight",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "1.0",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "appearanceAttributes",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.colourfamily",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "red",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.texturefamily",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "glossy",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "generalInformation",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/generalInformation.materials",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "concrete",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "measurements",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.length",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "10",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.width",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "20",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.height",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "30",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.thickness",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "40",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
    ],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "images": Array [
      Object {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
      Object {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
    ],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "http://localhost:8000",
    "measurementValue": "",
    "name": "variant-name",
    "path": "/p/variant-name-glossy-concrete-3464354221",
    "productBenefits": Array [
      "product-benefits",
    ],
    "productReferences": Array [],
    "productScoringWeightInt": 1,
    "shortDescription": "Short description",
    "subTitle": "glossy",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
  },
]
`;

exports[`transformProduct original transform tests should handle no classifications 1`] = `
Array [
  Object {
    "BMI_BRANDS": Array [
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CATEGORY": Array [
      Object {
        "code": "parent-category-code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "PARENT-CATEGORY-CODE": Array [
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTFAMILY": Array [
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTLINE": Array [
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "allCategories": Array [
      Object {
        "code": "parent-category-code",
        "parentCategoryCode": "",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "BMI-brand-code",
        "parentCategoryCode": "BMI_Brands",
      },
    ],
    "approvalStatus": "approved",
    "baseProduct": Object {
      "code": "base-code",
      "name": "name",
    },
    "brandCode": undefined,
    "classifications": Array [],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "images": Array [
      Object {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
      Object {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
    ],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "http://localhost:8000",
    "measurementValue": "",
    "name": "variant-name",
    "path": "/p/variant-name-3464354221",
    "productBenefits": Array [
      "product-benefits",
    ],
    "productReferences": Array [],
    "productScoringWeightInt": 0,
    "shortDescription": "Short description",
    "subTitle": "",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
  },
]
`;

exports[`transformProduct original transform tests should handle no images 1`] = `
Array [
  Object {
    "APPEARANCEATTRIBUTES.COLOURFAMILY": Array [
      Object {
        "code": "codesymbol",
        "name": "red symbol",
        "value": "red",
      },
    ],
    "APPEARANCEATTRIBUTES.TEXTUREFAMILY": Array [
      Object {
        "code": "codesymbol",
        "name": "glossy symbol",
        "value": "glossy",
      },
    ],
    "BMI_BRANDS": Array [
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CATEGORY": Array [
      Object {
        "code": "parent-category-code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CLASSIFICATION-FEATURE-CODE": Array [
      Object {
        "code": "codesymbol",
        "name": "value symbol",
        "value": "value",
      },
    ],
    "GENERALINFORMATION.MATERIALS": Array [
      Object {
        "code": "codesymbol",
        "name": "concrete symbol",
        "value": "concrete",
      },
    ],
    "MEASUREMENTS.HEIGHT": Array [
      Object {
        "code": "codemm",
        "name": "30 mm",
        "value": "30",
      },
    ],
    "MEASUREMENTS.LENGTH": Array [
      Object {
        "code": "codemm",
        "name": "10 mm",
        "value": "10",
      },
    ],
    "MEASUREMENTS.THICKNESS": Array [
      Object {
        "code": "codemm",
        "name": "40 mm",
        "value": "40",
      },
    ],
    "MEASUREMENTS.WIDTH": Array [
      Object {
        "code": "codemm",
        "name": "20 mm",
        "value": "20",
      },
    ],
    "PARENT-CATEGORY-CODE": Array [
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTFAMILY": Array [
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTLINE": Array [
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "SCORINGWEIGHTATTRIBUTES.SCORINGWEIGHT": Array [
      Object {
        "code": "codesymbol",
        "name": "1.0 symbol",
        "value": "1.0",
      },
    ],
    "allCategories": Array [
      Object {
        "code": "parent-category-code",
        "parentCategoryCode": "",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "BMI-brand-code",
        "parentCategoryCode": "BMI_Brands",
      },
    ],
    "approvalStatus": "approved",
    "baseProduct": Object {
      "code": "base-code",
      "name": "name",
    },
    "brandCode": undefined,
    "classifications": Array [
      Object {
        "code": "variant-code",
        "features": Array [
          Object {
            "code": "classification-feature-code",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "value",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "scoringWeightAttributes",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/scoringWeightAttributes.scoringweight",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "1.0",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "appearanceAttributes",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.colourfamily",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "red",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.texturefamily",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "glossy",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "generalInformation",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/generalInformation.materials",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "concrete",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "measurements",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.length",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "10",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.width",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "20",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.height",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "30",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.thickness",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "40",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
    ],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "images": Array [],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "",
    "measurementValue": "",
    "name": "variant-name",
    "path": "/p/variant-name-glossy-concrete-3464354221",
    "productBenefits": Array [
      "product-benefits",
    ],
    "productReferences": Array [],
    "productScoringWeightInt": 1,
    "shortDescription": "Short description",
    "subTitle": "glossy",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
  },
]
`;

exports[`transformProduct original transform tests should not transform full product without Variant products 1`] = `Array []`;

exports[`transformProduct original transform tests should transform full product with single variant to a single ES product 1`] = `
Array [
  Object {
    "APPEARANCEATTRIBUTES.COLOURFAMILY": Array [
      Object {
        "code": "codesymbol",
        "name": "red symbol",
        "value": "red",
      },
    ],
    "APPEARANCEATTRIBUTES.TEXTUREFAMILY": Array [
      Object {
        "code": "codesymbol",
        "name": "glossy symbol",
        "value": "glossy",
      },
    ],
    "BMI_BRANDS": Array [
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CATEGORY": Array [
      Object {
        "code": "parent-category-code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "BMI-brand-code",
        "name": "name",
      },
    ],
    "CLASSIFICATION-FEATURE-CODE": Array [
      Object {
        "code": "codesymbol",
        "name": "value symbol",
        "value": "value",
      },
    ],
    "GENERALINFORMATION.MATERIALS": Array [
      Object {
        "code": "codesymbol",
        "name": "concrete symbol",
        "value": "concrete",
      },
    ],
    "MEASUREMENTS.HEIGHT": Array [
      Object {
        "code": "codemm",
        "name": "30 mm",
        "value": "30",
      },
    ],
    "MEASUREMENTS.LENGTH": Array [
      Object {
        "code": "codemm",
        "name": "10 mm",
        "value": "10",
      },
    ],
    "MEASUREMENTS.THICKNESS": Array [
      Object {
        "code": "codemm",
        "name": "40 mm",
        "value": "40",
      },
    ],
    "MEASUREMENTS.WIDTH": Array [
      Object {
        "code": "codemm",
        "name": "20 mm",
        "value": "20",
      },
    ],
    "PARENT-CATEGORY-CODE": Array [
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTFAMILY": Array [
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "PRODUCTLINE": Array [
      Object {
        "code": "code",
        "name": "name",
      },
    ],
    "SCORINGWEIGHTATTRIBUTES.SCORINGWEIGHT": Array [
      Object {
        "code": "codesymbol",
        "name": "1.0 symbol",
        "value": "1.0",
      },
    ],
    "allCategories": Array [
      Object {
        "code": "parent-category-code",
        "parentCategoryCode": "",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "code",
        "parentCategoryCode": "parent-category-code",
      },
      Object {
        "code": "BMI-brand-code",
        "parentCategoryCode": "BMI_Brands",
      },
    ],
    "approvalStatus": "approved",
    "baseProduct": Object {
      "code": "base-code",
      "name": "name",
    },
    "brandCode": undefined,
    "classifications": Array [
      Object {
        "code": "variant-code",
        "features": Array [
          Object {
            "code": "classification-feature-code",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "value",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "scoringWeightAttributes",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/scoringWeightAttributes.scoringweight",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "1.0",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "appearanceAttributes",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.colourfamily",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "red",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/appearanceAttributes.texturefamily",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "glossy",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "generalInformation",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/generalInformation.materials",
            "featureUnit": Object {
              "name": "unit-name",
              "symbol": "symbol",
              "unitType": "unit-type",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "concrete",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
      Object {
        "code": "measurements",
        "features": Array [
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.length",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "10",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.width",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "20",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.height",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "30",
              },
            ],
            "name": "name",
          },
          Object {
            "code": "bmiClassificationCatalog/1.0/measurements.thickness",
            "featureUnit": Object {
              "name": "millimeter",
              "symbol": "mm",
              "unitType": "space",
            },
            "featureValues": Array [
              Object {
                "code": "code",
                "value": "40",
              },
            ],
            "name": "name",
          },
        ],
        "name": "name",
      },
    ],
    "code": "variant-code",
    "description": "<p>Some description</p>",
    "externalProductCode": "external-product-code",
    "images": Array [
      Object {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
      Object {
        "allowedToDownload": true,
        "assetType": "MASTER_IMAGE",
        "containerId": "container-id",
        "fileSize": 10,
        "format": "Product-Hero-Small-Desktop-Tablet",
        "mime": "image/jpeg",
        "name": "name",
        "realFileName": "real-file-name.jpeg",
        "url": "http://localhost:8000",
      },
    ],
    "isSampleOrderAllowed": true,
    "longDescription": "<p>Long description</p>",
    "mainImage": "http://localhost:8000",
    "measurementValue": "",
    "name": "variant-name",
    "path": "/p/variant-name-glossy-concrete-3464354221",
    "productBenefits": Array [
      "product-benefits",
    ],
    "productReferences": Array [],
    "productScoringWeightInt": 1,
    "shortDescription": "Short description",
    "subTitle": "glossy",
    "summary": "Summary",
    "totalVariantCount": 1,
    "variantScoringWeightInt": 0,
  },
]
`;
